<resources>
    <string name="app_name">Hoarder</string>

    <string name="hoarder_email">info@hoarder.com</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB4cAPD5nnPnLuacE62_UPCCVwkESxBmaU</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="checkout_txt">Checkout</string>
    <string name="simplify_api_key">sbpb_NWVkNzAxMDctYmI4MS00N2Y5LThkYzAtYTU5NjgzZjI3ZTA5</string>
    <string name="my_receipts">My Receipts</string>
    <string name="my_profile">My Profile</string>
    <string name="my_shopping_list">My Shopping List</string>
    <string name="your_shopping_list">Your Shopping List</string>
    <string name="your_account">Your Account</string>
    <string name="your_receipts">Your Receipts</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="hot_deals">Hot Deals</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="about_us">About us</string>
    <string name="hoarder_locations">Hoarder locations</string>
    <string name="customer_service">Customer Service</string>
    <string name="more">More</string>
    <string name="reference_number">Reference Number</string>
    <string name="checkout_summary">Checkout Summary</string>
    <string name="contact_us">contact us</string>
    <string name="shopping_list">Shopping List</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="receipts">Receipts</string>
    <string name="orders_complete">Orders Complete</string>
    <string name="_0_00">€0.00</string>
    <string name="edit_password">Edit Password</string>
</resources>
