<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/infoLayout"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginRight="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="15dp"
        android:layout_height="190dp" >
        <View
            android:layout_width="match_parent"
            android:background="@color/lightGrey"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"/>

        <View
            android:layout_height="match_parent"
            android:background="@color/lightGrey"
            android:id="@+id/profileLayoutDividerRight"
            android:layout_alignParentRight="true"
            android:layout_width="1dp" />

        <View
            android:layout_height="match_parent"
            android:background="@color/lightGrey"
            android:id="@+id/profileLayoutDividerLeft"
            android:layout_alignParentLeft="true"
            android:layout_width="1dp" />

        <View
            android:layout_width="match_parent"
            android:background="@color/lightGrey"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/profileIcon"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <View
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/bg"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:id="@+id/userDataDivider"
            android:layout_below="@+id/profileIcon" />

        <TextView
            android:text="Mobile number:"
            android:id="@+id/mobileLabel"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/creationLabel"
            android:layout_alignStart="@+id/creationLabel" />

        <TextView
            android:text="Email:"
            android:id="@+id/emailLabel"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_below="@+id/mobileLabel"
            android:layout_alignStart="@+id/mobileLabel" />

        <TextView
            android:text="Member since:"
            android:id="@+id/creationLabel"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/userDataDivider" />

        <TextView
            android:text="0879119613"
            android:id="@+id/mobileNumberText"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignBaseline="@+id/mobileLabel"
            android:layout_alignBottom="@+id/mobileLabel"
            android:layout_alignStart="@+id/emailTxt" />

        <TextView
            android:text="testaccount@gmail.com"
            android:id="@+id/emailTxt"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignBaseline="@+id/emailLabel"
            android:layout_alignBottom="@+id/emailLabel"
            android:layout_alignEnd="@+id/userDataDivider"
            android:layout_marginEnd="8dp" />

        <TextView
            android:text="12/02/2017"
            android:id="@+id/creationTxt"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_above="@+id/mobileLabel"
            android:layout_alignStart="@+id/mobileNumberText" />

        <TextView
            android:text="Name here"
            android:id="@+id/nameTxt"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_above="@+id/userDataDivider"
            android:layout_toEndOf="@+id/emailLabel"
            android:layout_marginStart="31dp" />
    </RelativeLayout>

    <TableLayout
        android:id="@+id/profileTableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">


        <View
            android:layout_width="match_parent"
            android:background="@color/lightGrey"
            android:id="@+id/tableDividerBottom"
            android:layout_height="1dp" />
        <TableRow
            android:layout_width="100dp"
            android:background="@color/white"
            android:id="@+id/creditRowProfile"
            android:layout_height="100dp">

            <ImageView
                app:srcCompat="@drawable/ic_icon_credit"
                android:id="@+id/creditIcon"
                android:tint="@color/colorPrimary"
                android:layout_height="match_parent"
                android:layout_width="100dp" />

            <TextView
                android:text="Store Credit"
                android:id="@+id/creditLabel"
                android:layout_weight="1"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_width="150dp" />

            <TextView
                android:text="@string/_0_00"
                android:id="@+id/storeCreditAmntTxt"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:layout_height="55dp"
                android:layout_width="wrap_content"
                android:textAlignment="center" />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:background="@color/lightGrey"
            android:layout_height="1dp"/>

        <TableRow
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/white"
            android:id="@+id/ordersRowProfile">

            <ImageView
                app:srcCompat="@drawable/ic_nav_cart"
                android:id="@+id/cartIcon"
                android:tint="@color/colorPrimary"
                android:layout_height="match_parent"
                android:layout_width="100dp" />

            <TextView
                android:text="@string/orders_complete"
                android:id="@+id/ordersCompleteText"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:text="42"
                android:id="@+id/ordersCompleteTxt"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:textAlignment="center" />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:background="@color/lightGrey"
            android:layout_height="1dp"/>

        <TableRow
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/white"
            android:id="@+id/receiptListRowProfile">

            <ImageView
                app:srcCompat="@drawable/ic_nav_receipt"
                android:id="@+id/receiptIconProfile"
                android:tint="@color/colorPrimary"
                android:layout_height="match_parent"
                android:layout_width="100dp"/>

            <TextView
                android:text="@string/receipts"
                android:id="@+id/receiptsLinkLabel"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginStart="16dp" />

            <ImageView
                app:srcCompat="@drawable/ic_chevron_goto"
                android:id="@+id/receiptLinkDirection"
                android:tint="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:background="@color/lightGrey"
            android:layout_height="1dp"/>

        <TableRow
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/white"
            android:id="@+id/editRowProfile">

            <ImageView
                app:srcCompat="@drawable/ic_nav_password"
                android:id="@+id/profileIconProfile"
                android:tint="@color/colorPrimary"
                android:layout_height="match_parent"
                android:layout_width="100dp"/>

            <TextView
                android:text="@string/edit_password"
                android:id="@+id/editProfileLinkLabel"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginStart="16dp" />

            <ImageView
                app:srcCompat="@drawable/ic_chevron_goto"
                android:id="@+id/profileLinkDirection"
                android:tint="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:background="@color/lightGrey"
            android:layout_height="1dp"/>

        <TableRow
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/white"
            android:id="@+id/shoppingListRowProfile">

            <ImageView
                app:srcCompat="@drawable/ic_nav_list"
                android:id="@+id/listIconProfile"
                android:tint="@color/colorPrimary"
                android:layout_height="match_parent"
                android:layout_width="100dp"/>

            <TextView
                android:text="@string/shopping_list"
                android:id="@+id/shoppingListLabel"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginStart="16dp" />

            <ImageView
                app:srcCompat="@drawable/ic_chevron_goto"
                android:id="@+id/listLinkDirection"
                android:tint="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

        </TableRow>
        <View
            android:layout_width="match_parent"
            android:background="@color/lightGrey"
            android:layout_height="1dp"/>
    </TableLayout>
</LinearLayout>